Unit group alignment and favorite action correction

--- a/src/pages/engineview/engineview.scss
+++ b/src/pages/engineview/engineview.scss
@@ -41,7 +41,7 @@ iframe {
     background: #fff;
     border: none;         /* Reset default border */
     height: 100vh;        /* Viewport-relative units */
-    width: 90%;
+    /*width: 90%;*/
     margin: 0 auto;
 }
 
